3.2.1 (unreleased)
------------------
LIMS-2527: Bika Listing Table fail on invalid `sort_on` index
LIMS-2568: Multi AR Report Template raises AttributeError
LIMS-2548: Allow entry of negative values for LDL and UDL
LIMS-2489: Fix error in suppliers view when a Reference Sample is past expiry date
LIMS-2597: AttributeError: `bika_setup` on login on a new Plone site w/o bika.lims installed
LIMS-2558: JavaScript Uncaught TypeError: Cannot read property 'checkbox' of undefined causes endless Spinner
LIMS-2473: Link User to Contact: LDAP Users not found
LIMS-2477: Reference Analysis has no dependencies; remove guard that assumes it does
LIMS-2465: Not possible to translate Bika Listing Table Workflow Action Buttons
LIMS-1391: Add configurable identifier types (CAS# for AnalysisService)
LIMS-2466: Central Instrument Location Management
LIMS-2357: Custom Landing Page and Link to switch between the Front Page and Dashboard
LIMS-2341: Cleanup and format default Multi-AR COA
LIMS-2455: Contact/Login Linkage Behavior
LIMS-2456: Restrict duplicate slots in worksheet templates to routine analyses only.
LIMS-2447: getDatePublished index not indexed correctly at time of AR publication
LIMS-2404: AR list in batches permitted sampling without Sampler and Sampling date provided
LIMS-2380: ARs are created in correct order (order of columns in ar-create form)
LIMS-2394: Calculation failure in worksheets. TDS Calc misfires again.
LIMS-2391: Use source analysis's sample ID in duplicate analysis IDs
LIMS-2351: Field analyses without results do not prevent Samples from being received
LIMS-2366: Workflow. AR stays in Received state with all Analyses in To be Verifie
LIMS-2384: ARImport: Workflow state of imported ARs and their Analyses not synchronised.
LIMS-2369: Workflow. Sampler and Date Sampled should be compulsory
LIMS-2355: Unable to view dormant/active filters in some bika_setup pages
LIMS-2344: Fix some UI javascript failures when viewing ARs