@@ -1,5 +1,7 @@
 3.2.1 (unreleased)
 ------------------
+
+LIMS-2352: Cleaner and smaller instrument import log
 LIMS-2527: Bika Listing Table fail on invalid `sort_on` index
 LIMS-2568: Multi AR Report Template raises AttributeError
 LIMS-2548: Allow entry of negative values for LDL and UDL
